test_src/compiler_errors/types/binary/UnsignedRightShiftBoolError4.b
class UnsignedRightShiftBoolError4 {
    void test() {
        var value = true;
        println(value >>>= 6);
    }
}
